...
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/itemNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_hint"
            android:imeOptions="actionNext"
            android:inputType="text" />

...
            android:text="@string/purchase_date_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/purchaseDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/purchase_date_hint"
            android:imeOptions="actionNext"
            android:focusable="false"/>

...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/description_hint"
                android:imeOptions="actionNext"
                android:inputType="text" />

...
            android:text="@string/make_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/makeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/make_hint"
            android:imeOptions="actionNext"
            android:inputType="text" />

...
            android:text="@string/model_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/modelInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model_hint"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:textColor="@color/black" />
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/serialNumberInput"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/serial_number_hint"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:textColor="@color/black" />
...
            android:text="@string/estimate_value"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/estimatedValueInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/estimate_value_hint"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext" />

...
            android:text="@string/comment_label"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/commentInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/comment_hint"
            android:imeOptions="actionDone"
            android:inputType="text"
...
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Add item button -->
        <Button
            android:id="@+id/addItemButton"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:text="@string/add_item" />
...
