...
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/description_keyword_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:hint="Enter description keyword"
        android:imeOptions="actionNext"/>

...
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/make_keyword_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:hint="Enter make" />


...
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/start_date_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:hint="Start Date"
            android:imeOptions="actionNext"
            android:focusable="false"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"/>

        <EditText
            android:id="@+id/end_date_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:hint="End Date"
            android:imeOptions="actionNext"
            android:focusable="false"
...
            android:paddingLeft="30dp"
            android:paddingRight="30dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Search" />

</LinearLayout>
