<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sort.SortOptionsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sort_option_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sort By:"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"/>

    <ToggleButton
        android:id="@+id/sort_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Date"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textOff="DATE OFF"
        android:textOn="DATE ON"
        android:background="@color/celadon"/>

    <ToggleButton
        android:id="@+id/sort_description_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textOff="DESCRIPTION OFF"
        android:textOn="DESCRIPTION ON"
        android:background="@color/celadon"/>

    <ToggleButton
        android:id="@+id/sort_make_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Make"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textOff="MAKE OFF"
        android:textOn="MAKE ON"
        android:background="@color/celadon"/>

    <ToggleButton
        android:id="@+id/sort_value_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Value"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textOff="VALUE OFF"
        android:textOn="VALUE ON"
        android:background="@color/celadon"/>

    <ToggleButton
        android:id="@+id/sort_tag_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Value"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:textOff="TAG OFF"
        android:textOn="TAG ON"
        android:background="@color/celadon"/>

    <ToggleButton
        android:id="@+id/ascending_button"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Ascending"
        android:paddingHorizontal="30dp"
        android:textColor="@color/white"
        android:textOff="ASCENDING"
        android:textOn="DESCENDING"
        android:background="@color/celadon"/>

    <Button
        android:id="@+id/sort_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DONE"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>