...
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintBottom_toTopOf="@id/item_list_constraint_layout"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:text="@string/delete_button"
            app:layout_constraintStart_toStartOf="parent"
...
            android:text="@string/add_tag_button"
            app:layout_constraintStart_toEndOf="@+id/deleteButton"
            app:layout_constraintTop_toTopOf="parent"
            />

        <Button
            android:id="@+id/sort_button"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/baseline_sort_24"

            app:layout_constraintEnd_toStartOf="@+id/filter_button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tag_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_constraint_layout"
        app:layout_constraintBottom_toTopOf="@+id/total_constraint_layout">

        <ListView
            android:id="@+id/item_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
